# Digit-classification

./: .gitignore  CMakeLists.txt  README.md  convert_model.py  main.cpp  model.h5  requirements.txt  training.ipynb
saved_model/: fingerprint.pb  saved_model.pb
saved_model/variables/: variables.data-00000-of-00001  variables.index
